# ASpaceOpera

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  widgetids.h
src/client/: ASpaceOpera.cpp  CMakeLists.txt
src/interfaces/: CMakeLists.txt  Pixels.cpp  Pixels.h  chatnotebook.cpp  chatnotebook.h  chatwindow.cpp  chatwindow.h  masterwindow.cpp  masterwindow.h
